RESOLVED FIXED305882
AX: fix ENABLE_ACCESSIBILITY_LOCAL_FRAME=1 build failures
https://bugs.webkit.org/show_bug.cgi?id=305882
Summary AX: fix ENABLE_ACCESSIBILITY_LOCAL_FRAME=1 build failures
Joshua Hoffman
Reported 2026-01-20 16:31:54 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-20 16:32:00 PST
Joshua Hoffman
Comment 2 2026-01-20 16:47:38 PST
EWS
Comment 3 2026-01-21 12:34:21 PST
Committed 305953@main (2c0c4839d26d): <https://commits.webkit.org/305953@main> Reviewed commits have been landed. Closing PR #56936 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.