AX: fix ENABLE_ACCESSIBILITY_LOCAL_FRAME=1 build failures https://bugs.webkit.org/show_bug.cgi?id=305882 rdar://168545976

Reviewed by Tyler Wilcock.

`AXObjectCache::frameID()` is non-optional now, so update call sites so the
ENABLE_ACCESSIBILITY_LOCAL_FRAME=1 configuration can build.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::createIsolatedObjectData):
* Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:
(-[WKAccessibilityWebPageObjectBase setIsolatedTree:]):

Canonical link: https://commits.webkit.org/305953@main